<resources>
    <string name="app_name">ControloVacinas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="pagina_inicial_label">Pagina inicial</string>

    <string name="lista_pacientes_label">Pacientes</string>
    <string name="novo_paciente_label">Novo Paciente</string>
    <string name="editar_paciente_label">Editar Paciente</string>
    <string name="eliminar_paciente_label">Eliminar paciente?</string>

    <string name="lista_fabricante_label">Fabricantes</string>
    <string name="novo_fabricante_label">Novo Fabricante</string>
    <string name="edita_fabricante_label">Editar Fabricante</string>
    <string name="elimina_fabricante_label">Eliminar Fabricante?</string>

    <string name="lista_vacinas_label">Vacinas</string>
    <string name="nova_vacina_label">Nova vacina</string>
    <string name="edita_vacina_label">Edita Vacina</string>
    <string name="elimina_vacina_label">Eliminar Vacina?</string>

    <string name="lista_efeitos_secundarios_label">Efeitos Secundarios</string>
    <string name="novo_efeito_secundario_label">Novo Efeitos Secundarios</string>
    <string name="edita_efeito_secundario_label">Editar Efeitos Secundarios</string>
    <string name="elimina_efeito_secundario_label">Eliminar Efeitos secundários?</string>


    <string name="fabricante">Fabricante:</string>
    <string name="sexo">Sexo:</string>
    <string name="contacto">Contacto:</string>
    <string name="data_nascimento">Data Nascimento:</string>
    <string name="nome">Nome:</string>
    <string name="pacientes">Pacientes</string>
    <string name="fabricantes">Fabricantes</string>
    <string name="numero_do_lote">Numero do Lote:</string>
    <string name="data_da_vacinacao">Data da vacinação:</string>
    <string name="vacinas">Vacinas</string>
    <string name="dor_no_braco">Dor no Braço</string>
    <string name="calafrios">Calafrios</string>
    <string name="dores_mosculares">Dores Mosculares</string>
    <string name="diarreia">Diarreia</string>
    <string name="dor_de_cabeca">Dor de cabeça</string>
    <string name="fadiga">Fadiga</string>
    <string name="outros">Outros:</string>
    <string name="febre">Febre</string>
    <string name="efeitos_secundarios">Efeitos Secundarios</string>
    <string name="novo_paciente">Novo Paciente</string>
    <string name="alterar_paciente">Alterar Paciente</string>
    <string name="eliminar_paciente">Eliminar Paciente</string>
    <string name="novo_fabricante">Novo Fabricante</string>
    <string name="alterar_fabricante">Alterar Fabricante</string>
    <string name="eliminar_fabricante">Eliminar Fabricante</string>
    <string name="nova_vacina">Adicionar Vacina</string>
    <string name="alterar_vacina">Alterar Vacina</string>
    <string name="eliminar_vacina">Eliminar Vacina</string>
    <string name="novo_efeito_secundario">Adicionar Efeitos Secundarios</string>
    <string name="alterar_efeitos_secundarios">Alterar Efeitos Secundarios</string>
    <string name="eliminar_efeitos_secundarios">Eliminar Efeitos Secundarios</string>
    <string name="guardar_paciente">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao">Controlo Vacinas 1.0</string>
    <string name="introduza_nome_paciente">Introduza o nome do paciente</string>
    <string name="introduza_sexo">Introduza o sexo</string>
    <string name="introduza_contacto">Introduza o contacto</string>
    <string name="erro_inserir_paciente">Erro ao inserir paciente</string>
    <string name="paciente_guardado_sucesso">Paciente guardado com sucesso</string>
    <string name="erro_alterar_paciente">Erro ao alterar paciente</string>
    <string name="elimina_paciente">Elimar Paciente</string>
    <string name="erro_elimina_paciente">Erro ao eliminar paciente</string>
    <string name="paciente_eliminado_sucesso">Paciente eliminado com sucesso</string>
    <string name="guardar_fabricante">Guardar</string>
    <string name="introduza_nome_fabricante">Introduza o nome do Fabricante</string>
    <string name="erro_inserir_fabricante">Erro ao inserir Fabricante</string>
    <string name="fabricante_guardado">Fabricante guardado com sucesso</string>
    <string name="erro_alterar_fabricante">Erro ao alterar Fabricante</string>
    <string name="fabricante_guardado_sucesso">Fabricante guardado com sucesso</string>
    <string name="erro_eliminar_fabricante">Erro ao eliminar Fabricante</string>
    <string name="fabricante_eliminado_sucesso">Fabricante eliminado com sucesso</string>
    <string name="paciente">Paciente:</string>
    <string name="guardar_vacina">Guardar</string>
    <string name="erro_introduzir_lote">Intruduza o número do lote</string>
    <string name="erro_inserir_vacina">Erro ao inserir vacina</string>
    <string name="erro_alterar_vacina">Erro ao alterar vacina</string>
    <string name="vacina_guardada_sucesso">Vacina guardada com sucesso</string>
    <string name="erro_eliminar_vacina">Erro ao eliminar vacina</string>
    <string name="vacina_eliminada_sucesso">Vacina eliminada com sucesso</string>
    <string name="guardar_efeito_secundario">Guardar</string>
    <string name="nome_paciente">Nome Paciente:</string>
    <string name="erro_eliminar_efeitos_secundarios">Erro ao eliminar Efeitos secundarios</string>
    <string name="efeitos_secundarios_eliminados_sucesso">Efeitos secundarios eliminados com sucesso</string>
    <string name="Erro_edita_efeitos_secundarios">Erro ao alterar efeitos secundarios</string>
    <string name="efeitos_secundarios_alterados_sucesso">Efeitos secundarios alterados com sucesso</string>
    <string name="nova_vacina_sucesso">Nova vacina introduzida com sucesso</string>
    <string name="erro_inserir_efeito_secundario">Erro ao inserir Efeitos Secundarios</string>
    <string name="efeito_secundario_introduzido_sucesso">Novo efeito secundario introduzido com sucesso</string>


</resources>