<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_novo_efeitos_secundarios"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/novo_efeito_secundario"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_efeitos_secundarios"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_efeitos_secundarios"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_efeitos_secundarios"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminar_efeitos_secundarios"
        app:showAsAction="ifRoom" />
</menu>