<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditaEfeitosSecundariosFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/nome_paciente" />

    <Spinner
        android:id="@+id/spinnerVacina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos" />

    <CheckBox
        android:id="@+id/checkBoxFebre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/febre" />

    <CheckBox
        android:id="@+id/checkBoxFadiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/fadiga" />

    <CheckBox
        android:id="@+id/checkBoxDorCabeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/dor_de_cabeca" />

    <CheckBox
        android:id="@+id/checkBoxDoresMosculares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/dores_mosculares" />

    <CheckBox
        android:id="@+id/checkBoxCalafrios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/calafrios" />

    <CheckBox
        android:id="@+id/checkBoxDiarreia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/diarreia" />

    <CheckBox
        android:id="@+id/checkBoxDorBraco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/dor_no_braco" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextOutros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_campos"
            android:layout_marginLeft="@dimen/margem_campos"
            android:layout_marginTop="@dimen/margem_campos"
            android:layout_marginEnd="@dimen/margem_campos"
            android:layout_marginRight="@dimen/margem_campos"
            android:hint="@string/outros"
            android:inputType="textLongMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>