<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PaginaInicialFragment">

    <fragment
        android:id="@+id/ListaPacientesFragment"
        android:name="com.example.controlovacinas.ListaPacientesFragment"
        android:label="@string/lista_pacientes_label"
        tools:layout="@layout/fragment_lista_pacientes">

        <action
            android:id="@+id/action_ListaPacientesFragment_to_PaginaInicialFragment"
            app:destination="@id/PaginaInicialFragment" />
    </fragment>
    <fragment
        android:id="@+id/PaginaInicialFragment"
        android:name="com.example.controlovacinas.PaginaInicialFragment"
        android:label="@string/pagina_inicial_label"
        tools:layout="@layout/fragment_inicial">

        <action
            android:id="@+id/action_PaginaInicialFragment_to_ListaPacientesFragment"
            app:destination="@id/ListaPacientesFragment" />
        <action
            android:id="@+id/action_PaginaInicialFragment_to_ListaFabricantesFragment"
            app:destination="@id/listaFabricantesFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaFabricantesFragment"
        android:name="com.example.controlovacinas.ListaFabricantesFragment"
        android:label="@string/lista_fabricante_label">
        <action
            android:id="@+id/action_listaFabricantesFragment_to_PaginaInicialFragment"
            app:destination="@id/PaginaInicialFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaVacinasFragment"
        android:name="com.example.controlovacinas.ListaVacinasFragment"
        android:label="fragment_lista_vacinas"
        tools:layout="@layout/fragment_lista_vacinas" />
</navigation>