<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovoPacienteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_campos"
            android:layout_marginLeft="@dimen/margem_campos"
            android:layout_marginTop="@dimen/margem_campos"
            android:layout_marginEnd="@dimen/margem_campos"
            android:layout_marginRight="@dimen/margem_campos"
            android:hint="@string/nome" />
    </com.google.android.material.textfield.TextInputLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem_campos"
        android:minDate="01/01/1900" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_campos"
            android:layout_marginLeft="@dimen/margem_campos"
            android:layout_marginTop="@dimen/margem_campos"
            android:layout_marginEnd="@dimen/margem_campos"
            android:layout_marginRight="@dimen/margem_campos"
            android:hint="@string/sexo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margem_campos"
                android:layout_marginLeft="@dimen/margem_campos"
                android:layout_marginTop="@dimen/margem_campos"
                android:layout_marginEnd="@dimen/margem_campos"
                android:layout_marginRight="@dimen/margem_campos"
                android:hint="@string/contacto" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>